scrollbar corrected

--- a/styles.css
+++ b/styles.css
@@ -1,205 +1,202 @@
 body {
-    background-color: #f7cd75;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-}
-
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: transparent;
+  background-color: #f7cd75;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    background-color: transparent;
+  width: 8px;
 }
-
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: #e0e0e0;
+  display: none;
+  border-radius: 4px;
 }
-
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.5);
+}
+:hover::-webkit-scrollbar-thumb {
+  display: block;
+}
 
 .container {
-    padding: 20px 40px;
+  padding: 20px 40px;
 }
 
 .app {
-    max-width: 800px;
-    background-color: #fff;
-    margin: 0 auto;
-    display: flex;
-    max-height: 450px;
-    border-radius: 5px;
-    top: 200px;
-    position: relative;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  max-width: 800px;
+  background-color: #fff;
+  margin: 0 auto;
+  display: flex;
+  max-height: 450px;
+  border-radius: 5px;
+  top: 200px;
+  position: relative;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .wallets {
-    width: 300px;
-    background: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    border-radius: 5px;
+  width: 300px;
+  background: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  border-radius: 5px;
 }
 
 .wallets__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .wallets__title {
-    color: #333333;
-    font-weight: 500;
+  color: #333333;
+  font-weight: 500;
 }
 
 .plus {
-    background-image: url("/img/plus.svg");
-    height: 24px;
-    width: 24px;
-    cursor: pointer;
+  background-image: url("/img/plus.svg");
+  height: 24px;
+  width: 24px;
+  cursor: pointer;
 }
 
 /* CARD */
 
 .card {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 115px;
-    background-color: #fff;
-    border: 1px solid #dedede;
-    border-radius: 5px;
-    margin-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 115px;
+  background-color: #fff;
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  margin-bottom: 25px;
 }
 
 .card:hover {
-    border: 1px solid #8793c6;
+  border: 1px solid #8793c6;
 }
 
 .active {
-    border: 1px solid #8793c6;
+  border: 1px solid #8793c6;
 }
 
 .card__container {
-    padding: 15px 10px;
+  padding: 15px 10px;
 }
 
 .card__logo {
-    display: flex;
-    align-items: start;
-    margin-bottom: 10px;
+  display: flex;
+  align-items: start;
+  margin-bottom: 10px;
 }
 
 .card__serialnumber {
-    color: #727272;
-    margin-bottom: 5px;
-    font-size: 15px;
+  color: #727272;
+  margin-bottom: 5px;
+  font-size: 15px;
 }
 
 .card__date {
-    color: #727272;
-    font-size: 12px;
+  color: #727272;
+  font-size: 12px;
 }
-
 
 /* BALANCE */
 
 .balance {
-    width: 500px;
-    overflow: auto;
+  width: 500px;
+  overflow: auto;
 }
 
 .balance__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #333333;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #333333;
+  margin-bottom: 20px;
 }
 
 .balance__title {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .balance__total {
-    font-size: 1.8em;
-    font-weight: 700;
+  font-size: 1.8em;
+  font-weight: 700;
 }
 
 sup {
-    font-size: 0.6em;
+  font-size: 0.6em;
 }
 
 hr {
-    border: 1px solid #dedede;
-    margin-bottom: 20px;
+  border: 1px solid #dedede;
+  margin-bottom: 20px;
 }
 
 /* REPORTS */
 
 .report {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .report__item {
-    display: flex;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
 .report__minus {
-    background-image: url("/img/minus.svg");
-    height: 24px;
-    width: 24px;
-    border: 2px solid #333333;
-    border-radius: 50%;
-    margin-right: 30px;
+  background-image: url("/img/minus.svg");
+  height: 24px;
+  width: 24px;
+  border: 2px solid #333333;
+  border-radius: 50%;
+  margin-right: 30px;
 }
 
 .report__plus {
-    background-image: url("/img/plus.svg");
-    height: 24px;
-    width: 24px;
-    border: 2px solid #333333;
-    border-radius: 50%;
-    margin-right: 30px;
+  background-image: url("/img/plus.svg");
+  height: 24px;
+  width: 24px;
+  border: 2px solid #333333;
+  border-radius: 50%;
+  margin-right: 30px;
 }
 
 .report__info-title,
 .report__info-short {
-    margin: 5px;
+  margin: 5px;
 }
 
 .report__info-title {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .report__info-short {
-    font-size: 14px;
-    color: #b5b5b5;
+  font-size: 14px;
+  color: #b5b5b5;
 }
 
 .report__amount {
-    display: flex;
-    justify-content: flex-end;
-    width: 114px;
+  display: flex;
+  justify-content: flex-end;
+  width: 114px;
 }
 
 .blue {
-    color: #8797c6;
+  color: #8797c6;
 }
 
 .green {
-    color: #8ace5e;
-
+  color: #8ace5e;
 }
